* gcc.dg/c90-intconst-1.c, gcc.dg/c99-intconst-1.c: New tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47215 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-20  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-intconst-1.c, gcc.dg/c99-intconst-1.c: New tests.
+
 2001-11-20  Nick Clifton  <nickc@cambridge.redhat.com>
 
 	* gcc.c-torture/compile/981006-1.x: Treat XScale like ARM.
