--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -7906,6 +7906,183 @@
   [(set_attr "type" "*,load,store,*,*,*")
    (set_attr "length" "*,*,*,8,12,16")])
 
+(define_expand "movtf"
+  [(set (match_operand:TF 0 "general_operand" "")
+	(match_operand:TF 1 "any_operand" ""))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "{ rs6000_emit_move (operands[0], operands[1], TFmode); DONE; }")
+
+(define_insn "*movtf_internal"
+  [(set (match_operand:TF 0 "nonimmediate_operand" "=f,f,m,!r,!r,!r")
+	(match_operand:TF 1 "input_operand" "f,m,f,G,H,F"))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128
+   && (gpc_reg_operand (operands[0], TFmode)
+       || gpc_reg_operand (operands[1], TFmode))"
+  "*
+{
+  switch (which_alternative)
+    {
+    default:
+      abort ();
+    case 0:
+      /* We normally copy the low-numbered register first.  However, if
+	 the first register operand 0 is the same as the second register of
+	 operand 1, we must copy in the opposite order.  */
+      if (REGNO (operands[0]) == REGNO (operands[1]) + 1)
+	return \"fmr %L0,%L1\;fmr %0,%1\";
+      else
+	return \"fmr %0,%1\;fmr %L0,%L1\";
+    case 1:
+      return \"lfd %0,%1\;lfd %L0,%L1\";
+    case 2:
+      return \"stfd %1,%0\;stfd %L1,%L0\";
+    case 3:
+    case 4:
+    case 5:
+      return \"#\";
+    }
+}"
+  [(set_attr "type" "fp,fpload,fpstore,*,*,*")
+   (set_attr "length" "8,8,8,12,16,20")])
+
+(define_split
+  [(set (match_operand:TF 0 "gpc_reg_operand" "")
+	(match_operand:TF 1 "const_double_operand" ""))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  [(set (match_dup 3) (match_dup 1))
+   (set (match_dup 0)
+	(float_extend:TF (match_dup 3)))]
+  "
+{
+  operands[2] = operand_subword (operands[1], 0, 0, DFmode);
+  operands[3] = gen_reg_rtx (DFmode);
+}")
+
+(define_insn_and_split "extenddftf2"
+  [(set (match_operand:TF 0 "gpc_reg_operand" "=f")
+	(float_extend:TF (match_operand:DF 1 "gpc_reg_operand" "f")))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "#"
+  ""
+  [(set (match_dup 2) (match_dup 3))]
+  "
+{
+  operands[2] = gen_rtx_REG (DFmode, REGNO (operands[0] + 1));
+  operands[3] = CONST0_RTX (DFmode);
+}")
+
+(define_insn_and_split "extendsftf2"
+  [(set (match_operand:TF 0 "gpc_reg_operand" "=f")
+	(float_extend:TF (match_operand:SF 1 "gpc_reg_operand" "f")))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "#"
+  ""
+  [(set (match_dup 2) (match_dup 3))]
+  "
+{
+  operands[2] = gen_rtx_REG (SFmode, REGNO (operands[0] + 1));
+  operands[3] = CONST0_RTX (SFmode);
+}")
+
+(define_insn "trunctfdf2"
+  [(set (match_operand:DF 0 "gpc_reg_operand" "=f")
+	(float_truncate:DF (match_operand:TF 1 "gpc_reg_operand" "f")))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "fadd %0,%1,%L1"
+  [(set_attr "type" "fp")
+   (set_attr "length" "8")])
+
+(define_insn_and_split "trunctfsf2"
+  [(set (match_operand:SF 0 "gpc_reg_operand" "=f")
+	(float_truncate:SF (match_operand:TF 1 "gpc_reg_operand" "f")))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "#"
+  ""
+  [(set (match_dup 2)
+	(float_truncate:DF (match_dup 1)))
+   (set (match_dup 0)
+	(float_truncate:SF (match_dup 2)))]
+  "
+{
+  operands[2] = gen_reg_rtx (DFmode);
+}")
+
+(define_expand "floatditf2"
+  [(set (match_dup 2)
+	(float:DF (match_operand:DI 1 "gpc_reg_operand" "")))
+   (set (match_operand:TF 0 "gpc_reg_operand" "")
+	(float_extend:TF (match_dup 2)))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_POWERPC64
+   && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "{ operands[2] = gen_reg_rtx (DFmode); }")
+
+(define_expand "floatsitf2"
+  [(set (match_dup 2)
+	(float:DF (match_operand:SI 1 "gpc_reg_operand" "")))
+   (set (match_operand:TF 0 "gpc_reg_operand" "")
+	(float_extend:TF (match_dup 2)))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "{ operands[2] = gen_reg_rtx (DFmode); }")
+
+(define_expand "fix_trunctfdi2"
+  [(set (match_dup 2)
+	(float_truncate:DF (match_operand:TF 1 "gpc_reg_operand" "")))
+   (set (match_operand:DI 0 "gpc_reg_operand" "")
+	(fix:SI (match_dup 2)))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_POWERPC64
+   && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "{ operands[2] = gen_reg_rtx (DFmode); }")
+
+(define_expand "fix_trunctfsi2"
+  [(set (match_dup 2)
+	(float_truncate:DF (match_operand:TF 1 "gpc_reg_operand" "")))
+   (set (match_operand:SI 0 "gpc_reg_operand" "")
+	(fix:SI (match_dup 2)))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "{ operands[2] = gen_reg_rtx (DFmode); }")
+
+(define_insn "negtf2"
+  [(set (match_operand:TF 0 "gpc_reg_operand" "=f")
+	(neg:TF (match_operand:TF 1 "gpc_reg_operand" "f")))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "*
+{
+  if (REGNO (operands[0]) == REGNO (operands[1]) + 1)
+    return \"fneg %L0,%L1\;fneg %0,%1\";
+  else
+    return \"fneg %0,%1\;fneg %L0,%L1\";
+}"
+  [(set_attr "type" "fp")
+   (set_attr "length" "8")])
+
+(define_insn "abstf2"
+  [(set (match_operand:TF 0 "gpc_reg_operand" "=f")
+	(abs:TF (match_operand:TF 1 "gpc_reg_operand" "f")))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "*
+{
+  if (REGNO (operands[0]) == REGNO (operands[1]) + 1)
+    return \"fabs %L0,%L1\;fabs %0,%1\";
+  else
+    return \"fabs %0,%1\;fabs %L0,%L1\";
+}"
+  [(set_attr "type" "fp")
+   (set_attr "length" "8")])
+
+(define_insn ""
+  [(set (match_operand:TF 0 "gpc_reg_operand" "=f")
+	(neg:TF (abs:TF (match_operand:TF 1 "gpc_reg_operand" "f"))))]
+  "DEFAULT_ABI == ABI_AIX && TARGET_HARD_FLOAT && TARGET_LONG_DOUBLE_128"
+  "*
+{
+  if (REGNO (operands[0]) == REGNO (operands[1]) + 1)
+    return \"fnabs %L0,%L1\;fnabs %0,%1\";
+  else
+    return \"fnabs %0,%1\;fnabs %L0,%L1\";
+}"
+  [(set_attr "type" "fp")
+   (set_attr "length" "8")])
+
 ;; Next come the multi-word integer load and store and the load and store
 ;; multiple insns.
 (define_expand "movdi"
