2001-11-18  Roger Sayle <roger@eyesopen.com>
	* parse.h (java_expand_switch): Remove old prototype.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47221 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-18  Roger Sayle <roger@eyesopen.com>
+
+	* parse.h (java_expand_switch): Remove old prototype.
+
 2001-11-18  Tom Tromey  <tromey@redhat.com>
 
 	Fix for PR java/1401:
