--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-20  Graham Stott  <grahams@redhat.com>
+
+	* unwind-dw2-fde.c (__deregister_frame_info_bases):
+	Fix lossage in last change return OB.
+
 Tue Nov 20 11:56:12 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* config/alpha/xm-vms.h (_POSIX_EXIT): Define.
