--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -13622,6 +13622,31 @@
    vor %0,%1,%1"
   [(set_attr "type" "altivec")])
 
+;; Copy VRSAVE into a GPR.
+(define_insn "get_vrsave"
+  [(set (match_operand:SI 0 "register_operand" "=r")
+	(unspec:SI [(reg:SI 109)] 28))]
+  "TARGET_ALTIVEC"
+  "mfvrsave %0"
+  [(set_attr "type" "altivec")])
+
+(define_insn "*set_vrsave_internal"
+  [(match_parallel 0 "vrsave_operation"
+     [(set (reg:SI 109)
+	   (unspec:SI [(match_operand:SI 1 "register_operand" "r")
+		       (reg:SI 109)] 30))])]
+  "TARGET_ALTIVEC"
+  "mtvrsave %1"
+  [(set_attr "type" "altivec")])
+
+(define_insn "set_vrsave"
+  [(set (reg:SI 109)
+	(unspec:SI [(match_operand:SI 0 "register_operand" "r")
+		    (reg:SI 109)] 30))]
+  "TARGET_ALTIVEC"
+  "mtvrsave %0"
+  [(set_attr "type" "altivec")])
+
 ;; Simple binary operations.
 
 (define_insn "altivec_vaddubm"
