--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -7385,7 +7385,7 @@
   [(set (match_operand:SI 0 "gpc_reg_operand" "")
 	(unspec:SI [(match_operand:SI 1 "got_operand" "")
 		    (match_dup 2)] 8))]
-  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1"
+  "DEFAULT_ABI == ABI_V4 && flag_pic == 1"
   "
 {
   if (GET_CODE (operands[1]) == CONST)
@@ -7411,7 +7411,7 @@
   [(set (match_operand:SI 0 "gpc_reg_operand" "=r")
 	(unspec:SI [(match_operand:SI 1 "got_no_const_operand" "")
 		    (match_operand:SI 2 "gpc_reg_operand" "b")] 8))]
-  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1"
+  "DEFAULT_ABI == ABI_V4 && flag_pic == 1"
   "{l|lwz} %0,%a1@got(%2)"
   [(set_attr "type" "load")])
 
@@ -7421,7 +7421,7 @@
   [(set (match_operand:SI 0 "gpc_reg_operand" "")
 	(unspec:SI [(match_operand:SI 1 "got_no_const_operand" "")
 		    (match_operand:SI 2 "memory_operand" "")] 8))]
-  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS)
+  "DEFAULT_ABI == ABI_V4
     && flag_pic == 1
     && (reload_in_progress || reload_completed)"
   [(set (match_dup 0) (match_dup 2))
@@ -9288,8 +9288,7 @@
 (define_insn "load_toc_v4_pic_si"
   [(set (match_operand:SI 0 "register_operand" "=l")
 	(unspec:SI [(const_int 0)] 7))]
-  "(DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1
-   && TARGET_32BIT"
+  "DEFAULT_ABI == ABI_V4 && flag_pic == 1 && TARGET_32BIT"
   "bl _GLOBAL_OFFSET_TABLE_@local-4"
   [(set_attr "type" "branch")
    (set_attr "length" "4")])
@@ -9342,7 +9341,7 @@
 
 (define_expand "builtin_setjmp_receiver"
   [(use (label_ref (match_operand 0 "" "")))]
-  "((DEFAULT_ABI == ABI_V4 || DEFAULT_ABI == ABI_SOLARIS) && flag_pic == 1)
+  "(DEFAULT_ABI == ABI_V4 && flag_pic == 1)
    || (TARGET_TOC && TARGET_MINIMAL_TOC)"
   "
 {
@@ -9473,8 +9472,7 @@
 
       if (DEFAULT_ABI == ABI_V4
           || DEFAULT_ABI == ABI_AIX_NODESC
-	  || DEFAULT_ABI == ABI_DARWIN
-	  || DEFAULT_ABI == ABI_SOLARIS)
+	  || DEFAULT_ABI == ABI_DARWIN)
 	operands[0] = force_reg (Pmode, operands[0]);
 
       else if (DEFAULT_ABI == ABI_AIX)
@@ -9522,8 +9520,7 @@
 
       if (DEFAULT_ABI == ABI_V4
 	  || DEFAULT_ABI == ABI_AIX_NODESC
-	  || DEFAULT_ABI == ABI_DARWIN
-	  || DEFAULT_ABI == ABI_SOLARIS)
+	  || DEFAULT_ABI == ABI_DARWIN)
 	operands[0] = force_reg (Pmode, operands[0]);
 
       else if (DEFAULT_ABI == ABI_AIX)
@@ -9755,8 +9752,7 @@
    (clobber (match_scratch:SI 3 "=l,l,l,l"))]
   "DEFAULT_ABI == ABI_AIX_NODESC
    || DEFAULT_ABI == ABI_V4
-   || DEFAULT_ABI == ABI_DARWIN
-   || DEFAULT_ABI == ABI_SOLARIS"
+   || DEFAULT_ABI == ABI_DARWIN"
   "*
 {
   if (INTVAL (operands[2]) & CALL_V4_SET_FP_ARGS)
@@ -9788,8 +9784,7 @@
    (clobber (match_scratch:SI 4 "=l,l,l,l"))]
   "DEFAULT_ABI == ABI_AIX_NODESC
    || DEFAULT_ABI == ABI_V4
-   || DEFAULT_ABI == ABI_DARWIN
-   || DEFAULT_ABI == ABI_SOLARIS"
+   || DEFAULT_ABI == ABI_DARWIN"
   "*
 {
   if (INTVAL (operands[3]) & CALL_V4_SET_FP_ARGS)
@@ -12933,7 +12928,7 @@
   else if (get_attr_length (insn) == 4)
     return \"{bdn|bdnz} %l0\";
   else
-    return \"bdz %$+8\;b %l0\";
+    return \"bdz $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -12957,7 +12952,7 @@
   else if (get_attr_length (insn) == 4)
     return \"bdz %l0\";
   else
-    return \"{bdn|bdnz} %$+8\;b %l0\";
+    return \"{bdn|bdnz} $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -12981,7 +12976,7 @@
   else if (get_attr_length (insn) == 4)
     return \"{bdn|bdnz} %l0\";
   else
-    return \"bdz %$+8\;b %l0\";
+    return \"bdz $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13005,7 +13000,7 @@
   else if (get_attr_length (insn) == 4)
     return \"bdz %l0\";
   else
-    return \"{bdn|bdnz} %$+8\;b %l0\";
+    return \"{bdn|bdnz} $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13031,7 +13026,7 @@
   else if (get_attr_length (insn) == 4)
     return \"{bdn|bdnz} %l0\";
   else
-    return \"bdz %$+8\;b %l0\";
+    return \"bdz $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13055,7 +13050,7 @@
   else if (get_attr_length (insn) == 4)
     return \"bdz %l0\";
   else
-    return \"{bdn|bdnz} %$+8\;b %l0\";
+    return \"{bdn|bdnz} $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13079,7 +13074,7 @@
   else if (get_attr_length (insn) == 4)
     return \"{bdn|bdnz} %l0\";
   else
-    return \"bdz %$+8\;b %l0\";
+    return \"bdz $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13103,7 +13098,7 @@
   else if (get_attr_length (insn) == 4)
     return \"bdz %l0\";
   else
-    return \"{bdn|bdnz} %$+8\;b %l0\";
+    return \"{bdn|bdnz} $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13129,7 +13124,7 @@
   else if (get_attr_length (insn) == 4)
     return \"bdz %l0\";
   else
-    return \"{bdn|bdnz} %$+8\;b %l0\";
+    return \"{bdn|bdnz} $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13153,7 +13148,7 @@
   else if (get_attr_length (insn) == 4)
     return \"{bdn|bdnz} %l0\";
   else
-    return \"bdz %$+8\;b %l0\";
+    return \"bdz $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13177,7 +13172,7 @@
   else if (get_attr_length (insn) == 4)
     return \"bdz %l0\";
   else
-    return \"{bdn|bdnz} %$+8\;b %l0\";
+    return \"{bdn|bdnz} $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
@@ -13201,7 +13196,7 @@
   else if (get_attr_length (insn) == 4)
     return \"{bdn|bdnz} %l0\";
   else
-    return \"bdz %$+8\;b %l0\";
+    return \"bdz $+8\;b %l0\";
 }"
   [(set_attr "type" "branch")
    (set_attr "length" "*,12,16")])
