--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-11-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* clipper.c (clipper_movstr): Avoid uninitialized warning.
+	* i960.c (is_mask, legitimize_address): Likewise.
+	* m88k.c (m88k_expand_prologue): Likewise.
+	* m88k.md: Likewise.
+	* mcore.c (emit_new_cond_insn): Likewise.
+	* stormy16.c (xstormy16_emit_cbranch): Likewise.
+
 2001-11-20  Zack Weinberg  <zack@codesourcery.com>
 
 	* config.gcc: Delete powerpcle-*-solaris2* stanza.
