--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-decl.c (c_expand_deferred_function): Only call c_expand_body
+	if fndecl is still DECL_INLINE and has DECL_RESULT.
+
 2001-11-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* clipper.c (clipper_movstr): Avoid uninitialized warning.
