--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-21  Richard Sandiford  <rsandifo@redhat.com>
+
+	* cfg.c: Fix typos and formatting in the introductory comment.
+
 Wed Nov 21 12:38:37 CET 2001  Jan Hubicka
 
 	* profile.c (compute_branch_probabilites):  Compute probabilities
